Fixed app list right container to not overlap left container scrollbar
- Container widths in apps list now use pixels instead of em
- Container widths now match properly and rightcontainer doesn't overlap
  the scrollbar any more

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -54,7 +54,11 @@ tr:hover>td.remove>a, tr:hover>td.password>img,tr:hover>td.displayName>img, tr:h
 tr:hover>td.remove>a { float:right; }
 li.selected { background-color:#ddd; }
 table.grid { width:100%; }
-#rightcontent { padding-left: 1em; }
+#leftcontent, .leftcontent {
+	width: 256px;
+}
+#rightcontent, .rightcontent { top: 80px; left: 336px; }
+#rightcontent { padding-left: 10px; }
 div.quota {
 	float: right;
 	display: block;
